2017-04-28  Charlie Zender  <zender@uci.edu>

	* Fix uninitialized memory errors caught by valgrind in recent nco_grd_nfr() grid-span code

2017-04-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.7-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha03 final changes';git push
	git tag -a 4.6.7-alpha03 -m 'Version 4.6.7-alpha03 new features: msk_src,msk_dst,ugrid;';git push --tags

	* Add mask_b = mask_out = dst_grid_imask to regridded output when flg_msk_out == True

2017-04-26  Charlie Zender  <zender@uci.edu>

	* Add ugrid_fl option to direct ncremap to infer UGRID from source input file

	* Regridder can now infer masks from missing values of any variable

	* Add msk_src and msk_dst options to specify mask-template variables to ncremap

2017-04-25  Charlie Zender  <zender@uci.edu>

	* Add clc.cdl, nsm.cdl, and trj.cdl for EarthCube CF2 project

	* Change "grid" argument to "scrip" to distinguish it from UGRID

2017-04-24  Charlie Zender  <zender@uci.edu>

	* Document UGRID

	* NCO 4.6.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha02 final changes';git push
	git tag -a 4.6.7-alpha02 -m 'Version 4.6.7-alpha02 new features: auto-detect regional grids for ERWG';git push --tags

	* nco_grd_nfr() always diagnose grid extent, nco_grd_xtn, even when corners unknown

	* nco_grd_nfr() writes hint file ncremap_tmp_hnt_[dst/src].txt with regional ERWG flags

2017-04-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.7-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha01 final changes';git push
	git tag -a 4.6.7-alpha01 -m 'Version 4.6.7-alpha01 new features: Same as 4.6.6';git push --tags

	* Add autoconf/configure stub to use same git-based version as bld/Makefile

	* NCO 4.6.6 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.6 final changes';git push
	git tag -a 4.6.6 -m 'Version 4.6.6 new features: no_cll_msr,no_frm_trm,no_stg_grd,hsi,lst_rnk_ge2,UGRID 2D,JSON shape,OMI';git push --tags
