@@ -26,8 +26,10 @@ ncremap
 [\-j
 .IR job_nbr ] 
 [\-M] [\-m
-.IR map_fl ] 
-[\-n
+.IR map_fl ] [\--msk_dst =
+.IR msk_dst ] [\--msk_out =
+.IR msk_out ] [\--msk_src =
+.IR msk_src ] [\-n
 .IR nco_usr ] 
 [\--no_cll_msr ] [\--no_frm_trm] [\--no_stg_grd]
 [\-O
@@ -54,7 +56,7 @@ ncremap
 .IR rgr_var ] 
 [\-v
 .IR var_lst ] 
-[\--vrb_lvl ] 
+[\--vrb_lvl = 
 .IR vrb_lvl ] [\--version ] [\-w
 .IR wgt_gnr ] 
 [\-x
